# 2dgame

./: Pipfile  cli.py  pyproject.toml  start.py
game/: __init__.py  config.py  debug_info.py  gate.py  map.py  physicalobject.py  player.py  resources.py  sensors.py  walls.py
ml/: __init__.py
